src/it/istio/src/test/k3s/echo/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: echo
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: echo
